--- a/code/scala/pbt_project.yml
+++ b/code/scala/pbt_project.yml
@@ -2,6 +2,21 @@ name: adam.mertz
 description: User fork
 version: 1
 author: felicita.gerhold@hotmail.com
-workflows: {}
+workflows:
+  workflows/W1:
+    name: W1
+    description: Really solid info
+    author: felicita.gerhold@hotmail.com
+    mode: batch
+    language: scala
+    createdAt: '2022-01-04 15:53:15'
+    datasets:
+      inputs: []
+      outputs: []
 datasets: {}
-schedules: {}
+schedules:
+  schedules/Scott_Tillman:
+    name: Scott_Tillman
+    description: Really solid info
+    createdAt: '2022-01-04 15:53:15'
+    author: felicita.gerhold@hotmail.com
